--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "type": "git",
     "url": "https://github.com/TimothyGu/fateserver-node.git"
   },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ]
+  "license": "MIT",
   "author": "Timothy Gu <timothygu99@gmail.com>",
   "scripts": {
     "start": "node ./bin/www"
