Don't care about devdeps version
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
-    "nodemon": "~1.2",
-    "jsdoc": "~3.3"
+    "nodemon": "*",
+    "jsdoc": "*"
   }
 }
