--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "docs": "$(npm bin)/jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "compression": "1.2.x",
+    "compression": "~1.2.1",
     "ejs": "1.0.x",
     "entities": "1.1.x",
-    "express": "~4.10.2",
+    "express": "~4.10.3",
     "xz-pipe": "0.0.x",
     "debug": "2.1.x",
     "morgan": "~1.5.0",
