--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "docs": "$(npm bin)/jsdoc -c jsdoc.json"
   },
   "dependencies": {
+    "async": "~0.9.0",
     "compression": "~1.2.1",
+    "debug": "2.1.x",
     "ejs": "1.0.x",
     "entities": "1.1.x",
     "express": "~4.10.3",
-    "xz-pipe": "0.0.x",
-    "debug": "2.1.x",
-    "morgan": "~1.5.0",
     "moment": "2.8.x",
+    "morgan": "~1.5.0",
     "toobusy": "~0.2.4",
-    "async": "~0.9.0"
+    "xz-pipe": "0.0.x"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
