--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment": "2.8.x",
     "morgan": "~1.5.0",
     "toobusy": "~0.2.4",
-    "xz-pipe": "0.0.x"
+    "xz-pipe": "0.0.x",
+    "memwatch": "~0.2.2"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
