--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Timothy Gu <timothygu99@gmail.com>",
   "scripts": {
     "start": "$(npm bin)/nodemon ./bin/www",
-    "docs": "$(npm bin)/jsdoc -c jsdoc.json"
+    "docs": "$(npm bin)/jsdoc -c jsdoc.json",
+    "build": "$(npm bin)/lessc --clean-css fate.less >public/css/fate.min.css"
   },
   "dependencies": {
     "async": "~0.9.0",
@@ -30,6 +31,8 @@
   "engine": "node >= 0.10.0",
   "devDependencies": {
     "nodemon": "*",
-    "jsdoc": "*"
+    "jsdoc": "*",
+    "less": "~2.2.0",
+    "less-plugin-clean-css": "~1.4.0"
   }
 }
