--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "morgan": "~1.5.0",
     "toobusy": "~0.2.4",
     "xz-pipe": "0.0.x",
-    "memwatch": "~0.2.2",
     "lru-cache": "~2.5.0",
     "rwlock": "~4.0.0"
   },
@@ -33,6 +32,7 @@
     "nodemon": "*",
     "jsdoc": "*",
     "less": "~2.2.0",
-    "less-plugin-clean-css": "~1.4.0"
+    "less-plugin-clean-css": "~1.4.0",
+    "memwatch": "~0.2.2"
   }
 }
