--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "async": "~0.9.0",
-    "compression": "~1.2.1",
+    "compression": "~1.3.0",
     "debug": "2.1.x",
     "ejs": "1.0.x",
     "entities": "1.1.x",
     "express": "~4.10.3",
-    "moment": "2.8.x",
+    "moment": "~2.9.0",
     "morgan": "~1.5.0",
     "toobusy": "~0.2.4",
     "xz-pipe": "0.0.x",
