--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "dependencies": {
     "async": "~0.9.0",
     "compression": "~1.3.0",
-    "debug": "2.1.x",
-    "ejs": "1.0.x",
+    "debug": "~2.1.0",
+    "ejs": "~1.0.0",
     "entities": "1.1.x",
-    "express": "~4.10.3",
+    "express": "~4.11.0",
     "moment": "~2.9.0",
     "morgan": "~1.5.0",
     "toobusy": "~0.2.4",
     "xz-pipe": "0.0.x",
     "lru-cache": "~2.5.0",
-    "rwlock": "~4.0.0"
+    "rwlock": "~5.0.0"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
