--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "async": "~0.9.0",
     "compression": "~1.3.0",
     "debug": "~2.1.0",
-    "ejs": "~1.0.0",
+    "ejs": "1.0.0",
     "entities": "1.1.x",
     "express": "~4.11.0",
     "moment": "~2.9.0",
