--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   "author": "Timothy Gu <timothygu99@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "$(npm bin)/nodemon ./bin/www",
-    "docs": "$(npm bin)/jsdoc -c jsdoc.json",
-    "build": "$(npm bin)/lessc --clean-css fate.less >public/css/fate.min.css"
+    "start": "nodemon ./bin/www",
+    "docs": "jsdoc -c jsdoc.json",
+    "build": "lessc --clean-css fate.less >public/css/fate.min.css"
   },
   "dependencies": {
     "async": "~0.9.0",
     "compression": "~1.3.0",
     "debug": "~2.1.0",
-    "ejs": "1.0.0",
-    "entities": "1.1.x",
+    "ejs": "~2.1.4",
     "express": "~4.11.0",
+    "lru-cache": "~2.5.0",
     "moment": "~2.9.0",
     "morgan": "~1.5.0",
+    "rwlock": "~5.0.0",
     "toobusy": "~0.2.4",
-    "xz-pipe": "0.0.x",
-    "lru-cache": "~2.5.0",
-    "rwlock": "~5.0.0"
+    "xz-pipe": "~0.0.0"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
