--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
   },
   "dependencies": {
     "async": "~0.9.0",
-    "compression": "~1.3.0",
-    "debug": "~2.1.0",
-    "ejs": "~2.1.4",
-    "express": "~4.11.0",
-    "lru-cache": "~2.5.0",
-    "moment": "~2.9.0",
-    "morgan": "~1.5.0",
-    "rwlock": "~5.0.0",
+    "compression": "^1.3.0",
+    "debug": "^2.1.0",
+    "ejs": "^2.2.1",
+    "express": "^4.11.1",
+    "lru-cache": "^2.5.0",
+    "moment": "^2.9.0",
+    "morgan": "^1.5.0",
+    "rwlock": "^5.0.0",
     "toobusy": "~0.2.4",
-    "xz-pipe": "~0.0.0"
+    "xz-pipe": "0.0.0"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
     "nodemon": "*",
     "jsdoc": "*",
-    "less": "~2.2.0",
-    "less-plugin-clean-css": "~1.4.0",
+    "less": "^2.2.0",
+    "less-plugin-clean-css": "^1.4.0",
     "memwatch": "~0.2.2"
   }
 }
