--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "morgan": "^1.5.0",
     "rwlock": "^5.0.0",
     "toobusy": "~0.2.4",
-    "xz-pipe": "0.0.0"
+    "xz-pipe": "~0.0.0"
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
