--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "async": "~0.9.0",
     "compression": "^1.3.0",
     "debug": "^2.1.0",
-    "ejs": "^2.2.1",
+    "ejs-tj": "^2.2.4-beta.3",
     "express": "^4.11.1",
     "lru-cache": "^2.5.0",
     "moment": "^2.9.0",
