--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "async": "~0.9.0",
+    "axm": "^0.2.26",
     "compression": "^1.3.0",
     "debug": "^2.1.0",
     "ejs-tj": "^2.2.4-beta.4",
