--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "morgan": "^1.5.0",
     "pm2": "^0.12.10",
     "rwlock": "^5.0.0",
-    "toobusy": "~0.2.4",
     "xz-pipe": "~0.0.0"
+  },
+  "optionalDependencies": {
+    "toobusy": "~0.2.4",
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
