--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Timothy Gu <timothygu99@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "pm2 start -i 0 ./bin/www",
+    "start": "pm2 start -i 0 app.json",
     "stop": "pm2 kill",
     "docs": "jsdoc -c jsdoc.json",
     "build": "lessc --clean-css fate.less >public/css/fate.min.css"
