--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "pm2 start -i 0 app.json",
     "stop": "pm2 kill",
     "docs": "jsdoc -c jsdoc.json",
-    "build": "lessc --clean-css fate.less >public/css/fate.min.css"
+    "build": "sh build.sh"
   },
   "dependencies": {
     "async": "~0.9.0",
@@ -33,10 +33,12 @@
   },
   "engine": "node >= 0.10.0",
   "devDependencies": {
-    "nodemon": "*",
+    "clean-css": "^3.1.9",
     "jsdoc": "*",
     "less": "^2.2.0",
     "less-plugin-clean-css": "^1.4.0",
-    "memwatch": "~0.2.2"
+    "memwatch": "~0.2.2",
+    "nodemon": "*",
+    "uglifyjs": "^2.4.10"
   }
 }
