--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "async": "~0.9.0",
+    "bluebird": "^2.9.27",
     "compression": "^1.3.0",
+    "csv-parse": "^0.1.2",
     "ejs-tj": "^2.2.4-beta.4",
     "express": "^4.11.1",
     "lru-cache": "^2.5.0",
